--- a/EnderLilies.uproject
+++ b/EnderLilies.uproject
@@ -5,7 +5,7 @@
 	"Description": "",
 	"Modules": [
 		{
-			"Name": "EnderLilies",
+			"Name": "Zenith",
 			"Type": "Runtime",
 			"LoadingPhase": "Default",
 			"AdditionalDependencies": [
