--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -87,3 +87,6 @@ r.AllowStaticLighting=False
 bLoadAllBanks=False
 bEnableLiveUpdate=False
 
+[/Script/UnrealEd.CookerSettings]
+cook.AllowCookedDataInEditorBuilds=True
+s.AllowUnversionedContentInEditor=1
