--- a/EnderLilies.uproject
+++ b/EnderLilies.uproject
@@ -1,6 +1,6 @@
 {
 	"FileVersion": 3,
-	"EngineAssociation": "4.26",
+	"EngineAssociation": "{0E6924F1-4329-F898-7160-02BDF1D910AA}",
 	"Category": "",
 	"Description": "",
 	"Modules": [
